# stm8_proj

./: README.md
EXTI_InterruptPriority/src/: main.c  main.h
StdPeriph_Driver/STM8L10x_StdPeriph_Driver/inc/: stm8l10x.h
StdPeriph_Driver/STM8L10x_StdPeriph_Driver/src/: stm8l10x_flash.c  stm8l10x_itc.c
StdPeriph_Driver/STM8TL5x_StdPeriph_Driver/: Release_Notes.html
StdPeriph_Driver/STM8TL5x_StdPeriph_Driver/inc/: stm8tl5x.h  stm8tl5x_awu.h  stm8tl5x_beep.h  stm8tl5x_clk.h  stm8tl5x_exti.h  stm8tl5x_flash.h  stm8tl5x_gpio.h  stm8tl5x_i2c.h  stm8tl5x_itc.h  stm8tl5x_iwdg.h  stm8tl5x_rst.h  stm8tl5x_spi.h  stm8tl5x_tim2.h  stm8tl5x_tim3.h  stm8tl5x_tim4.h  stm8tl5x_usart.h  stm8tl5x_wfe.h  stm8tl5x_wwdg.h
StdPeriph_Driver/STM8TL5x_StdPeriph_Driver/src/: stm8tl5x_awu.c  stm8tl5x_beep.c  stm8tl5x_clk.c  stm8tl5x_exti.c  stm8tl5x_flash.c  stm8tl5x_gpio.c  stm8tl5x_i2c.c  stm8tl5x_itc.c  stm8tl5x_iwdg.c  stm8tl5x_rst.c  stm8tl5x_spi.c  stm8tl5x_tim2.c  stm8tl5x_tim3.c  stm8tl5x_tim4.c  stm8tl5x_usart.c  stm8tl5x_wfe.c  stm8tl5x_wwdg.c
new_air/newair/: CMakeLists.txt  Makefile  readme.txt
new_air/newair/src/: basic.c  basic.h  common.c  common.h  define.h  fan.c  fan.h  init.c  init.h  ir.c  keycheck.c  keycheck.h  main.c  main.h  stm8s_it.c  stm8s_it.h
new_air/newair/src/backup/: checkbag.c  checkbag.h
newair/src/: define.h  main.c  stm8s_it.c
stm8s005/38K/src/: main.c  main.h  stm8s_it.c
stm8s005/38kprint/: CMakeLists.txt  Makefile
stm8s005/38kprint/src/: ir.c  ir.h  main.c  main.h  stm8s_it.c
stm8s005/EXTI_InterruptPriority/: CMakeLists.txt
stm8s005/EXTI_InterruptPriority/src/: main.c
stm8s005/TIM1_7PWM_Output/: Makefile
stm8s005/TIM1_7PWM_Output/src/: assert.c  main.c
stm8s005/UART2_Printf/: Makefile
stm8s005/UART2_Printf/src/: main.c
stm8s005/blinky/: CMakeLists.txt  Makefile
stm8s005/blinky/src/: main.c  stm8s_it.c
stm8s005/newair/: Makefile
